# AsymptoticDirectionsCalculator-public

./: CITATION.cff  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
AsympDirsCalculator/: AsympDirsTools.py  MAGCOSmacroFileGenerator.py  MAGNETOCOSMICSimportingTools.py  MAGNETOCOSMICSrun.py  MAGNETOCOSMICSrunManager.py  globals.py
AsympDirsCalculator/magcos_running_scripts/: AsymptoticDirection.g4mac  runNoRewriteMAGCOSsimulation.sh
tests/: test_basic.py
