[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "AsympDirsCalculator"
version = "1.1.0"
description = "Python library containing tools for calculating asymptotic directions and vertical cut-off rigidities."
readme = "README.md"
license = { text = "CC BY-NC-SA 4.0" }
authors = [
    { name = "Space Environment and Protection Group, University of Surrey" }
]
keywords = [
    "space physics",
    "earth",
    "asymptotic trajectory",
    "geomagnetic rigidity",
    "magnetocosmics",
]
classifiers = [
    "License :: Other/Proprietary License",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.21.6",
    "pandas>=1.3.5",
    "tqdm>=4.30.0",
    "joblib>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.urls]
Homepage = "https://github.com/ssc-maire/AsymptoticDirectionsCalculator-public"

[tool.hatch.build.targets.wheel]
packages = ["AsympDirsCalculator"]
only-include = [
    "AsympDirsCalculator",
]
